@@ -172,7 +172,7 @@ skip_to_sep( FILE *fp, const char sepmap[256] )
  */
 static int
 read_double( FILE *fp, const char whitemap[256], const char sepmap[256],
-	int lineno, int colno, double *out )
+	int lineno, int colno, double *out, gboolean fail )
 {
 	int ch;
 
@@ -198,6 +198,8 @@ read_double( FILE *fp, const char whitemap[256], const char sepmap[256],
 		vips_warn( "csv2vips", 
 			_( "error parsing number, line %d, column %d" ),
 			lineno, colno );
+		if( fail )
+			return( EOF ); 
 
 		/* Step over the bad data to the next separator.
 		 */
@@ -222,7 +224,8 @@ read_csv( FILE *fp, VipsImage *out,
 	int skip, 
 	int lines,
 	const char *whitespace, const char *separator,
-	gboolean read_image )
+	gboolean read_image,
+	gboolean fail )
 {
 	int i;
 	char whitemap[256];
@@ -265,7 +268,7 @@ read_csv( FILE *fp, VipsImage *out,
 	}
 	for( columns = 0; 
 		(ch = read_double( fp, whitemap, sepmap, 
-			skip + 1, columns + 1, &d )) == 0; 
+			skip + 1, columns + 1, &d, fail )) == 0; 
 		columns++ )
 		;
 	(void) fsetpos( fp, &pos );
@@ -308,7 +311,7 @@ read_csv( FILE *fp, VipsImage *out,
 			int colno = x + 1;
 
 			ch = read_double( fp, whitemap, sepmap,
-				lineno, colno, &d );
+				lineno, colno, &d, fail );
 			if( ch == EOF ) {
 				vips_error( "csv2vips", 
 					_( "unexpected EOF, line %d col %d" ), 
@@ -342,13 +345,15 @@ read_csv( FILE *fp, VipsImage *out,
 
 int
 vips__csv_read( const char *filename, VipsImage *out,
-	int skip, int lines, const char *whitespace, const char *separator )
+	int skip, int lines, const char *whitespace, const char *separator, 
+	gboolean fail )
 {
 	FILE *fp;
 
 	if( !(fp = vips__file_open_read( filename, NULL, TRUE )) ) 
 		return( -1 );
-	if( read_csv( fp, out, skip, lines, whitespace, separator, TRUE ) ) {
+	if( read_csv( fp, out, 
+		skip, lines, whitespace, separator, TRUE, fail ) ) {
 		fclose( fp );
 		return( -1 );
 	}
@@ -359,13 +364,15 @@ vips__csv_read( const char *filename, VipsImage *out,
 
 int
 vips__csv_read_header( const char *filename, VipsImage *out,
-	int skip, int lines, const char *whitespace, const char *separator )
+	int skip, int lines, const char *whitespace, const char *separator, 
+	gboolean fail )
 {
 	FILE *fp;
 
 	if( !(fp = vips__file_open_read( filename, NULL, TRUE )) ) 
 		return( -1 );
-	if( read_csv( fp, out, skip, lines, whitespace, separator, FALSE ) ) {
+	if( read_csv( fp, out, 
+		skip, lines, whitespace, separator, FALSE, fail ) ) {
 		fclose( fp );
 		return( -1 );
 	}
