@@ -77,10 +77,6 @@ typedef struct _VipsForeignLoadJpeg {
 	 */
 	int shrink;
 
-	/* Fail on first warning.
-	 */
-	gboolean fail;
-
 	/* Autorotate using exif orientation tag.
 	 */
 	gboolean autorotate;
@@ -144,13 +140,6 @@ vips_foreign_load_jpeg_class_init( VipsForeignLoadJpegClass *class )
 		G_STRUCT_OFFSET( VipsForeignLoadJpeg, shrink ),
 		1, 16, 1 );
 
-	VIPS_ARG_BOOL( class, "fail", 11, 
-		_( "Fail" ), 
-		_( "Fail on first warning" ),
-		VIPS_ARGUMENT_OPTIONAL_INPUT,
-		G_STRUCT_OFFSET( VipsForeignLoadJpeg, fail ),
-		FALSE );
-
 	VIPS_ARG_BOOL( class, "autorotate", 12, 
 		_( "Autorotate" ), 
 		_( "Rotate image using exif orientation" ),
@@ -201,7 +190,7 @@ vips_foreign_load_jpeg_file_header( VipsForeignLoad *load )
 	VipsForeignLoadJpegFile *file = (VipsForeignLoadJpegFile *) load;
 
 	if( vips__jpeg_read_file( file->filename, load->out, 
-		TRUE, jpeg->shrink, jpeg->fail, FALSE, jpeg->autorotate ) ) 
+		TRUE, jpeg->shrink, load->fail, FALSE, jpeg->autorotate ) ) 
 		return( -1 );
 
 	return( 0 );
@@ -214,7 +203,7 @@ vips_foreign_load_jpeg_file_load( VipsForeignLoad *load )
 	VipsForeignLoadJpegFile *file = (VipsForeignLoadJpegFile *) load;
 
 	if( vips__jpeg_read_file( file->filename, load->real, 
-		FALSE, jpeg->shrink, jpeg->fail,
+		FALSE, jpeg->shrink, load->fail,
 		load->access == VIPS_ACCESS_SEQUENTIAL, jpeg->autorotate ) )
 		return( -1 );
 
@@ -283,7 +272,7 @@ vips_foreign_load_jpeg_buffer_header( VipsForeignLoad *load )
 	VipsForeignLoadJpegBuffer *buffer = (VipsForeignLoadJpegBuffer *) load;
 
 	if( vips__jpeg_read_buffer( buffer->buf->data, buffer->buf->length, 
-		load->out, TRUE, jpeg->shrink, jpeg->fail, FALSE, 
+		load->out, TRUE, jpeg->shrink, load->fail, FALSE, 
 		jpeg->autorotate ) )
 		return( -1 );
 
@@ -297,7 +286,7 @@ vips_foreign_load_jpeg_buffer_load( VipsForeignLoad *load )
 	VipsForeignLoadJpegBuffer *buffer = (VipsForeignLoadJpegBuffer *) load;
 
 	if( vips__jpeg_read_buffer( buffer->buf->data, buffer->buf->length, 
-		load->real, FALSE, jpeg->shrink, jpeg->fail,
+		load->real, FALSE, jpeg->shrink, load->fail,
 		load->access == VIPS_ACCESS_SEQUENTIAL, jpeg->autorotate ) )
 		return( -1 );
 
