@@ -87,9 +87,11 @@ int vips__analyze_read( const char *filename, VipsImage *out );
 extern const char *vips__foreign_csv_suffs[];
 
 int vips__csv_read( const char *filename, VipsImage *out,
-	int skip, int lines, const char *whitespace, const char *separator );
+	int skip, int lines, const char *whitespace, const char *separator, 
+	gboolean fail );
 int vips__csv_read_header( const char *filename, VipsImage *out,
-	int skip, int lines, const char *whitespace, const char *separator );
+	int skip, int lines, const char *whitespace, const char *separator, 
+	gboolean fail );
 
 int vips__csv_write( VipsImage *in, const char *filename, 
 	const char *separator );
@@ -215,11 +217,11 @@ int vips__webp_write_buffer( VipsImage *out, void **buf, size_t *len,
 
 int vips__openslide_isslide( const char *filename );
 int vips__openslide_read_header( const char *filename, VipsImage *out, 
-	int level, gboolean autocrop, char *associated );
+	int level, gboolean autocrop, char *associated, gboolean fail );
 int vips__openslide_read( const char *filename, VipsImage *out, 
-	int level, gboolean autocrop );
+	int level, gboolean autocrop, gboolean fail );
 int vips__openslide_read_associated( const char *filename, VipsImage *out, 
-	const char *associated );
+	const char *associated, gboolean fail );
 
 #ifdef __cplusplus
 }
